--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Coveralls GitHub Actions
       uses: coverallsapp/github-action@master
       with:
-        github-token: ${{ secret.GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
