--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -1,28 +1,31 @@
-name: Tests
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: Coveralls
 
 on:
   push:
     branches: [ main ]
-  pull_requests:
+  pull_request:
     branches: [ main ]
 
 jobs:
-  coveralls:
+  build:
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Cloning repo
-    - uses: actions/checkout@v2
-    - name: Use Node.js 15.x
-      uses: action/setup-node@v1
+      uses: actions/checkout@v3
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v3
       with:
-        node-version: 15.x
+        node-version: 16.x
     - name: Installing dependencies
-      githubrun: npm install
-    - name: Generating coveralls information
+      run: npm install
+    - name: Generating coverage information
       run: npm run coverage
-    - name: Coveralls GitHub Actions
+    - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
