--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
     "typedoc": "^0.20.33"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.2"
   }
 }
