--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/inquirer": "^8.2.1",
     "@types/mocha": "^8.2.3",
+    "@types/node": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "chai": "^4.3.6",
     "eslint": "^7.21.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^8.4.0",
+    "inquirer": "^8.2.2",
+    "mocha": "^9.2.2",
     "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
-    "typedoc": "^0.20.33"
-  },
-  "dependencies": {
-    "inquirer": "^8.2.2"
+    "typedoc": "^0.22.15"
   }
 }
